[gd_scene load_steps=6 format=3 uid="uid://bk0v0johwqbqx"]

[ext_resource type="Script" path="res://scenes/leaderboards.gd" id="1_n1gbg"]
[ext_resource type="Texture2D" uid="uid://bfdd4myrv54dm" path="res://resources/GameBg.png" id="2_jowee"]
[ext_resource type="FontFile" uid="uid://cogcnrchifepv" path="res://resources/font_header.ttf" id="3_ldctu"]
[ext_resource type="FontFile" uid="uid://cwf8r47knkcfy" path="res://resources/font_body.ttf" id="4_dxx3a"]
[ext_resource type="Texture2D" uid="uid://b8ofe0fa6olkb" path="res://resources/btn_mainmenu.png" id="4_md1an"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n1gbg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, 2)
scale = Vector2(0.604688, 0.6)
texture = ExtResource("2_jowee")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -114.5
offset_right = 190.0
offset_bottom = 114.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Header" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_ldctu")
theme_override_font_sizes/font_size = 40
text = "LEADERBOARDS"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_dxx3a")
theme_override_font_sizes/font_size = 24

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_dxx3a")
theme_override_font_sizes/font_size = 24

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_dxx3a")
theme_override_font_sizes/font_size = 24

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_dxx3a")
theme_override_font_sizes/font_size = 24

[node name="Label5" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_dxx3a")
theme_override_font_sizes/font_size = 24

[node name="MainMenuButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_md1an")
